--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   http: ^1.2.2
   shimmer: ^3.0.0
   flutter_rating_bar: ^4.0.1
+  bloc: ^8.1.4
+  top_snackbar_flutter: ^3.1.0
 
 dev_dependencies:
   flutter_test:
