--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   bloc: ^8.1.4
   top_snackbar_flutter: ^3.1.0
+  get_it: ^8.0.2
+  injectable: ^2.5.0
+  injectable_generator: ^2.6.2
 
 dev_dependencies:
   flutter_test:
@@ -54,6 +57,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
+  build_runner: ^2.4.13
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
