--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   get_it: ^8.0.2
   injectable: ^2.5.0
   injectable_generator: ^2.6.2
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
