--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   injectable: ^2.5.0
   injectable_generator: ^2.6.2
   intl: ^0.19.0
+  equatable: ^2.0.7
 
 dev_dependencies:
   flutter_test:
